<resources>
    <string name="app_name">XAcademy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short. It must have at least 8 characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Sign Up</string>
    <string name="error_password_mismatch">Passwords do not match.</string>

    <!-- Strings related to main activity -->
    <string name="logout_button">Sign Out</string>

    <!-- Strings related to sign up activity -->
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_retype_password">Verify Password</string>
    <string name="register">Register</string>
    <string name="signup_campus">Campus</string>
    <string name="error_email_in_system">Email is used by another user.</string>
    <string name="action_signUp">Sign Up</string>

</resources>
