<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/fn_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_firstname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/ln_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_lastname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/password_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/retype_password_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_retype_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/campus_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_campus"
            android:imeActionLabel="@string/action_signUp"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/register"/>

</LinearLayout>